force-app/main/default/objects/JMS_Order_Volume__c/JMS_Order_Volume__c.object-meta.xml
<CustomObject>
    <description>Custom object</description>
    <label>Order Volume</label>
    <nameField>
        <label>Order Volume Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Volumes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>