force-app/main/default/objects/JMS_Order_Volume__c/fields/JMS_Date__c.field-meta.xml
<CustomField>
    <fullName>JMS_Date__c</fullName>
    <description>Oder Date.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>