force-app/main/default/objects/JMS_Order_Volume__c/fields/JMS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_External_Id__c</fullName>
    <description>Combination of fireflyid, date, jmscode, jmsprod / plan_to, ord_item_number, calendar_month / plan_to, item_nbr, date, operator, ff_id</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>