force-app/main/default/objects/JMS_Order_Volume__c/fields/JMS_Firefly_ID__c.field-meta.xml
<CustomField>
    <fullName>JMS_Firefly_ID__c</fullName>
    <description>ID of third party firefly</description>
    <label>Firefly ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>