force-app/main/default/objects/JMS_Order_Volume__c/fields/JMS_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>JMS_Item_Number__c</fullName>
    <description>Number of an item</description>
    <label>Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>