force-app/main/default/objects/JMS_Order_Volume__c/fields/JMS_Operator_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup relation to contract operator</description>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OrderVolumes</relationshipLabel>
    <relationshipName>OrderVolumes</relationshipName>
    <type>Lookup</type>
</CustomField>