force-app/main/default/objects/JMS_Order_Volume__c/fields/JMS_Operator_Org_Level_1__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_Org_Level_1__c</fullName>
    <description>Additional Levels for the customer, may also be refered to as control points.</description>
    <label>Operator Org Level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>