force-app/main/default/objects/JMS_Order_Volume__c/fields/JMS_operator_org_level_2__c.field-meta.xml
<CustomField>
    <fullName>JMS_operator_org_level_2__c</fullName>
    <description>Operator org leve;</description>
    <label>Operator Org Level 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>