force-app/main/default/objects/JMS_Order_Volume__c/fields/JMS_Plan_to_Code__c.field-meta.xml
<CustomField>
    <fullName>JMS_Plan_to_Code__c</fullName>
    <description>plan to code</description>
    <label>Plan-to Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>