force-app/main/default/objects/JMS_Order_Volume__c/fields/JMS_Product__c.field-meta.xml
<CustomField>
    <fullName>JMS_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Order Volumes</relationshipLabel>
    <relationshipName>Order_Volumes</relationshipName>
    <type>Lookup</type>
</CustomField>