force-app/main/default/objects/JMS_Order_Volume__c/fields/JMS_Quantity_Previous_Year__c.field-meta.xml
<CustomField>
    <fullName>JMS_Quantity_Previous_Year__c</fullName>
    <label>Quantity Previous Year</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>