force-app/main/default/objects/JMS_Order_Volume__c/fields/JMS_Type__c.field-meta.xml
<CustomField>
    <fullName>JMS_Type__c</fullName>
    <description>Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributor Velocity</fullName>
            </value>
            <value>
                <fullName>Unit Level Claims</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>