force-app/main/default/objects/JMS_Order_Volume__c/listViews/Unit_Level_Claims.listView-meta.xml
<ListView>
    <fullName>Unit_Level_Claims</fullName>
    <columns>NAME</columns>
    <columns>JMS_Operator_Id__c</columns>
    <columns>JMS_Product__c</columns>
    <columns>JMS_Quantity_Current_Year__c</columns>
    <columns>JMS_Quantity_Previous_Year__c</columns>
    <columns>JMS_Operator_Org_Level_1__c</columns>
    <columns>JMS_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>JMS_Type__c</field>
        <operation>equals</operation>
        <value>Unit Level Claims</value>
    </filters>
    <label>Unit Level Claims</label>
</ListView>